--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,11 +4,11 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #e5a4cb !default;
+$header-bg-color-secondary: #9055a2 !default;
 
 // Text
-$section-headings-color: #159957 !default;
+$section-headings-color: #89023e !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
